# JetCPP

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: build.yml
include/: Bullet.h  Common.h  EventSystem.h  GameOverUIComponent.h  GameState.h  HealthBarUI.h  MainMenuUI.h  MainMenuUIComponent.h  Player.h  SceneManager.h  TimeScale.h  UIComponent.h  UISystem.h
include/Core/: GameState.h  SceneManager.h
include/Entities/: Bullet.h  Enemy.h  IEntity.h  Player.h  Spawner.h
include/Entities/Enemy/: EnemyTypes.h  IEnemy.h  NormalEnemy.h  ZigZagEnemy.h
include/Events/: GameSceneEvents.h  GameStateEvents.h
include/Scenes/: InGameScene.h  MainMenuScene.h  Scene.h  SettingsScene.h
include/System/: CameraSystem.h  CollisionSystem.h  Gamewave.h  GamewaveSystem.h  Level.h  LevelSystem.h  SoundSystem.h  UISystem.h
include/UI/: GameSettingUIComponent.h  HealthBarUIComponent.h  MainMenuUIComponent.h  PauseMenuUIComponent.h  ScoreUIComponent.h
src/: Bullet.cpp  GameState.cpp  HealthBarUI.cpp  Player.cpp  Spawner.cpp  TimeScale.cpp  UISystem.cpp  main.cpp
src/Core/: GameState.cpp  SceneManager.cpp
src/Data/Levels/: level_1.json
src/Entities/: Bullet.cpp  Enemy.cpp  Player.cpp  Spawner.cpp
src/Entities/Enemy/: IEnemy.cpp  NormalEnemy.cpp  ZigZagEnemy.cpp
src/Events/: GameSceneEvents.cpp  GameStateEvents.cpp
src/Scenes/: InGameScene.cpp  MainMenuScene.cpp  SettingsScene.cpp
src/System/: CameraSystem.cpp  CollisionSystem.cpp  EventSystem.cpp  Gamewave.cpp  GamewaveSystem.cpp  Level.cpp  LevelSystem.cpp  SoundSystem.cpp  UISystem.cpp
src/UI/: GameOverUIComponent.cpp  HealthBarUIComponent.cpp  MainMenuUIComponent.cpp  ScoreUIComponent.cpp
src/UI/InGame/: GameOverUIComponent.cpp  PauseMenuUIComponent.cpp  ScoreUIComponent.cpp
src/UI/MainMenu/: MainMenuUIComponent.cpp
src/UI/Settings/: GameSettingUIComponent.cpp
